-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
-- Values are constrained locally with CHECK; no duplicated PostgreSQL enums.
-- PostgreSQL 14+ has built-in gen_random_uuid(); no extension needed.

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE credential_profiles (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    name varchar(100) NOT NULL UNIQUE,
    username varchar(100),
    password_encrypted text,
    enable_secret_encrypted text,
    snmp_community_ro_encrypted text,
    ssh_port integer NOT NULL DEFAULT 22 CHECK (ssh_port BETWEEN 1 AND 65535),
    snmp_port integer NOT NULL DEFAULT 161 CHECK (snmp_port BETWEEN 1 AND 65535),
    description text,
    created_by uuid,
    created_at timestamptz NOT NULL DEFAULT now(),
    updated_at timestamptz NOT NULL DEFAULT now(),
    CHECK ((username IS NULL) = (password_encrypted IS NULL)),
    CHECK (enable_secret_encrypted IS NULL OR password_encrypted IS NOT NULL),
    CHECK (password_encrypted IS NOT NULL OR snmp_community_ro_encrypted IS NOT NULL)
);

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE sites (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    name varchar(100) NOT NULL UNIQUE,
    location_detail varchar(255),
    description text,
    created_at timestamptz NOT NULL DEFAULT now(),
    updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE device_groups (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    name varchar(100) NOT NULL UNIQUE,
    color_tag varchar(7) CHECK (color_tag ~ '^#[0-9A-Fa-f]{6}$'),
    description text,
    created_at timestamptz NOT NULL DEFAULT now(),
    updated_at timestamptz NOT NULL DEFAULT now()
);

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE devices (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    management_ip inet NOT NULL UNIQUE CHECK (masklen(management_ip) IN (32, 128)),
    hostname varchar(255),
    device_type varchar(20) NOT NULL DEFAULT 'unknown' CHECK (device_type IN ('router','switch','firewall','access_point','server','other','unknown')),
    role varchar(30) CHECK (role IN ('core','distribution','access','edge_router','management','other')),
    vendor varchar(50),
    model varchar(100),
    os_version varchar(100),
    serial_number varchar(100),
    chassis_id_subtype smallint CHECK (chassis_id_subtype BETWEEN 1 AND 7),
    chassis_id text,
    site_id uuid REFERENCES sites(id) ON DELETE RESTRICT,
    credential_profile_id uuid REFERENCES credential_profiles(id) ON DELETE RESTRICT,
    platform varchar(50),
    management_state varchar(20) NOT NULL DEFAULT 'active' CHECK (management_state IN ('active','maintenance','retired')),
    reachability varchar(20) NOT NULL DEFAULT 'unknown' CHECK (reachability IN ('unknown','reachable','unreachable')),
    enrollment_source varchar(30) NOT NULL CHECK (enrollment_source IN ('manual_enrollment','auto_discovery','csv_import')),
    last_seen_at timestamptz,
    reachability_checked_at timestamptz,
    last_collected_at timestamptz NOT NULL,
    uptime_seconds bigint CHECK (uptime_seconds >= 0),
    uptime_observed_at timestamptz,
    notes text,
    created_by uuid,
    created_at timestamptz NOT NULL DEFAULT now(),
    updated_at timestamptz NOT NULL DEFAULT now(),
    CHECK ((chassis_id IS NULL) = (chassis_id_subtype IS NULL)),
    CHECK ((uptime_seconds IS NULL) = (uptime_observed_at IS NULL)),
    CHECK (reachability = 'unknown' OR reachability_checked_at IS NOT NULL),
    CHECK (reachability <> 'reachable' OR last_seen_at IS NOT NULL)
);
CREATE INDEX idx_devices_site_id ON devices (site_id);
CREATE INDEX idx_devices_credential_profile_id ON devices (credential_profile_id);
CREATE INDEX idx_devices_hostname ON devices (hostname);

CREATE TABLE device_group_members (
    device_id uuid NOT NULL REFERENCES devices(id) ON DELETE RESTRICT,
    group_id uuid NOT NULL REFERENCES device_groups(id) ON DELETE CASCADE,
    added_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (device_id, group_id)
);
CREATE INDEX idx_device_group_members_group_id ON device_group_members (group_id);

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE device_interfaces (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    device_id uuid NOT NULL REFERENCES devices(id) ON DELETE RESTRICT,
    if_index integer CHECK (if_index > 0),
    name varchar(255) NOT NULL,
    mac_address macaddr,
    description varchar(255),
    mode varchar(20) NOT NULL DEFAULT 'unknown' CHECK (mode IN ('access','trunk','routed','loopback','svi','unknown')),
    access_vlan_id integer CHECK (access_vlan_id BETWEEN 1 AND 4094),
    admin_status varchar(20) NOT NULL DEFAULT 'unknown' CHECK (admin_status IN ('up','down','testing','unknown')),
    oper_status varchar(20) NOT NULL DEFAULT 'unknown' CHECK (oper_status IN ('up','down','testing','unknown','dormant','not_present','lower_layer_down')),
    speed_bps bigint CHECK (speed_bps >= 0),
    collected_at timestamptz NOT NULL,
    retired_at timestamptz,
    updated_at timestamptz NOT NULL DEFAULT now(),
    UNIQUE (device_id, id),
    CHECK (access_vlan_id IS NULL OR mode = 'access')
);

CREATE TABLE interface_ip_addresses (
    interface_id uuid NOT NULL REFERENCES device_interfaces(id) ON DELETE RESTRICT,
    address inet NOT NULL,
    PRIMARY KEY (interface_id, address)
);

-- ifIndex/name may change or be reused: uniqueness applies to current interfaces only.
CREATE UNIQUE INDEX uq_interface_current_index ON device_interfaces(device_id, if_index)
    WHERE retired_at IS NULL AND if_index IS NOT NULL;
CREATE UNIQUE INDEX uq_interface_current_name ON device_interfaces(device_id, name)
    WHERE retired_at IS NULL;

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
-- Retired design: enrollment attempts now use Discovery/Collection collection_runs.
-- purpose = manual_enrollment / csv_import; device_id stays NULL on unverified failures.
