-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
-- No shared enums or extensions are recreated here. Apply Inventory first.

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
-- Reference only. Owner: ../../02_Device Inventory Management/sql/03_devices.sql
-- Discovery calls Inventory to upsert verified devices; never CREATE TABLE devices here.

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
-- Reference only. Owner: ../../02_Device Inventory Management/sql/04_device_interfaces.sql
-- Shared device_interfaces IDs are used by neighbor_observations.

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE discovery_scans (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    seed_ip inet NOT NULL CHECK (masklen(seed_ip) IN (32, 128)),
    credential_profile_id uuid NOT NULL REFERENCES credential_profiles(id) ON DELETE RESTRICT,
    status varchar(20) NOT NULL DEFAULT 'queued' CHECK (status IN ('queued','running','succeeded','partial','failed','cancelled')),
    timeout_seconds integer NOT NULL DEFAULT 2 CHECK (timeout_seconds > 0),
    max_depth integer NOT NULL CHECK (max_depth >= 0),
    max_devices integer NOT NULL CHECK (max_devices > 0),
    environment varchar(20) NOT NULL CHECK (environment IN ('physical','emulated')),
    initiated_by uuid,
    error_message text,
    requested_at timestamptz NOT NULL DEFAULT now(),
    started_at timestamptz,
    finished_at timestamptz,
    CHECK (started_at IS NULL OR started_at >= requested_at),
    CHECK (finished_at IS NULL OR finished_at >= COALESCE(started_at, requested_at)),
    CHECK ((status IN ('succeeded','partial','failed','cancelled')) = (finished_at IS NOT NULL)),
    CHECK (status NOT IN ('running','succeeded','partial') OR started_at IS NOT NULL)
);
CREATE INDEX idx_discovery_scans_requested_at ON discovery_scans (requested_at);

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE collection_runs (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    discovery_scan_id uuid REFERENCES discovery_scans(id) ON DELETE RESTRICT,
    device_id uuid REFERENCES devices(id) ON DELETE RESTRICT,
    target_ip inet NOT NULL CHECK (masklen(target_ip) IN (32, 128)),
    credential_profile_id uuid NOT NULL REFERENCES credential_profiles(id) ON DELETE RESTRICT,
    purpose varchar(30) NOT NULL CHECK (purpose IN ('manual_enrollment','csv_import','discovery','recollect')),
    transport varchar(20) NOT NULL CHECK (transport IN ('snmp','ssh')),
    environment varchar(20) NOT NULL CHECK (environment IN ('physical','emulated')),
    status varchar(20) NOT NULL DEFAULT 'queued' CHECK (status IN ('queued','running','succeeded','partial','failed','cancelled')),
    neighbor_status varchar(20) NOT NULL DEFAULT 'not_attempted' CHECK (neighbor_status IN ('not_attempted','succeeded','failed','unsupported')),
    initiated_by uuid,
    error_message text,
    requested_at timestamptz NOT NULL DEFAULT now(),
    started_at timestamptz,
    finished_at timestamptz,
    UNIQUE (id, device_id),
    CHECK ((purpose = 'discovery') = (discovery_scan_id IS NOT NULL)),
    CHECK (status NOT IN ('succeeded','partial') OR device_id IS NOT NULL),
    CHECK (started_at IS NULL OR started_at >= requested_at),
    CHECK (finished_at IS NULL OR finished_at >= COALESCE(started_at, requested_at)),
    CHECK ((status IN ('succeeded','partial','failed','cancelled')) = (finished_at IS NOT NULL)),
    CHECK (status NOT IN ('running','succeeded','partial') OR started_at IS NOT NULL)
);
CREATE INDEX idx_collection_runs_device_id_requested_at ON collection_runs (device_id, requested_at);
CREATE INDEX idx_collection_runs_discovery_scan_id ON collection_runs (discovery_scan_id);
CREATE INDEX idx_collection_runs_credential_profile_id ON collection_runs (credential_profile_id);

-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE neighbor_observations (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    collection_run_id uuid NOT NULL,
    local_device_id uuid NOT NULL,
    local_interface_id uuid NOT NULL,
    observation_key varchar(255) NOT NULL,
    protocol varchar(10) NOT NULL DEFAULT 'lldp' CHECK (protocol = 'lldp'),
    remote_chassis_id_subtype smallint CHECK (remote_chassis_id_subtype BETWEEN 1 AND 7),
    remote_chassis_id text,
    remote_port_id_subtype smallint CHECK (remote_port_id_subtype BETWEEN 1 AND 7),
    remote_port_id text,
    remote_system_name text,
    remote_port_description text,
    remote_management_ip inet CHECK (masklen(remote_management_ip) IN (32, 128)),
    observed_at timestamptz NOT NULL,
    FOREIGN KEY (collection_run_id, local_device_id) REFERENCES collection_runs(id, device_id) ON DELETE RESTRICT,
    FOREIGN KEY (local_device_id, local_interface_id) REFERENCES device_interfaces(device_id, id) ON DELETE RESTRICT,
    UNIQUE (collection_run_id, observation_key),
    CHECK ((remote_chassis_id IS NULL) = (remote_chassis_id_subtype IS NULL)),
    CHECK ((remote_port_id IS NULL) = (remote_port_id_subtype IS NULL)),
    CHECK (remote_chassis_id IS NOT NULL OR remote_port_id IS NOT NULL OR remote_system_name IS NOT NULL OR remote_management_ip IS NOT NULL)
);
CREATE INDEX idx_neighbor_observations_local_device_id_local_interface_id ON neighbor_observations (local_device_id, local_interface_id);
CREATE INDEX idx_neighbor_observations_observed_at ON neighbor_observations (observed_at);
